objects/Order_Transaction_Item_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Order_Transaction_Item__c</externalName>
    <fields>
        <fullName>AK_Order_Transaction_Item_c__c</fullName>
        <externalDeveloperName>AK_Order_Transaction_Item__c</externalDeveloperName>
        <label>AK_Order Transaction Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Date_Time_c__c</fullName>
        <externalDeveloperName>Adjustment_Date_Time__c</externalDeveloperName>
        <label>Adjustment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inbound_OrderItemDetail_c__c</fullName>
        <externalDeveloperName>Inbound_OrderItemDetail__c</externalDeveloperName>
        <label>Inbound Order Item Detail</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Order Transaction Item No</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Fulfillment_c__c</fullName>
        <externalDeveloperName>Order_Fulfillment__c</externalDeveloperName>
        <label>Order Fulfillment</label>
        <length>18</length>
        <referenceTo>Order_Fulfillment_c__x</referenceTo>
        <relationshipName>Order_Transaction_Items</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_Item_c__c</fullName>
        <externalDeveloperName>Order_Item__c</externalDeveloperName>
        <label>Order Item</label>
        <length>18</length>
        <referenceTo>OrderItem__x</referenceTo>
        <relationshipName>Order_Transaction_Items</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_Transaction_c__c</fullName>
        <externalDeveloperName>Order_Transaction__c</externalDeveloperName>
        <label>Order Transaction</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <referenceTo>Order_Transaction_c__x</referenceTo>
        <relationshipName>Order_Transaction_Items</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Post_Adjustment_Extended_Price_c__c</fullName>
        <externalDeveloperName>Post_Adjustment_Extended_Price__c</externalDeveloperName>
        <label>Post Adjustment Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Adjustment_Quantity_c__c</fullName>
        <externalDeveloperName>Post_Adjustment_Quantity__c</externalDeveloperName>
        <label>Post Adjustment Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Adjustment_Extended_Price_c__c</fullName>
        <externalDeveloperName>Pre_Adjustment_Extended_Price__c</externalDeveloperName>
        <label>Pre Adjustment Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Adjustment_Quantity_c__c</fullName>
        <externalDeveloperName>Pre_Adjustment_Quantity__c</externalDeveloperName>
        <label>Pre Adjustment Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type_c__c</fullName>
        <externalDeveloperName>Product_Type__c</externalDeveloperName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Core Charge</fullName>
                </value>
                <value>
                    <fullName>Motocompacto</fullName>
                </value>
                <value>
                    <fullName>Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code_c__c</fullName>
        <externalDeveloperName>Reason_Code__c</externalDeveloperName>
        <label>Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Desc_c__c</fullName>
        <externalDeveloperName>Reason_Desc__c</externalDeveloperName>
        <label>Reason Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalPost_Adjustment_Installation_Cha__c</fullName>
        <externalDeveloperName>TotalPost_Adjustment_Installation_Charge__c</externalDeveloperName>
        <label>TotalPost Adjustment Installation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Product_Tax__c</externalDeveloperName>
        <label>Total Post Adjustment Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_ShippedTax_c__c</fullName>
        <externalDeveloperName>Total_Post_ShippedTax__c</externalDeveloperName>
        <label>Total Post Adjustment Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_ShippingAmt_c__c</fullName>
        <externalDeveloperName>Total_Post_ShippingAmt__c</externalDeveloperName>
        <label>Total Post Adjustment Shipping Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Installation_Cha__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Installation_Charge__c</externalDeveloperName>
        <label>Total Pre Adjustment Installation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Product_Tax__c</externalDeveloperName>
        <label>Total Pre Adjustment Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_ShippingAmt_c__c</fullName>
        <externalDeveloperName>Total_Pre_ShippingAmt__c</externalDeveloperName>
        <label>Total Pre Adjustment Shipping Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_ShippingTax_c__c</fullName>
        <externalDeveloperName>Total_Pre_ShippingTax__c</externalDeveloperName>
        <label>Total Pre Adjustment Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Transaction Item</label>
    <pluralLabel>Order Transaction Items</pluralLabel>
</CustomObject>